package com.naosim.dddwork.api.attendance.total;

public class AttendanceTotalResponse {
    public Integer result_code;
    public String result_msg;
    public Integer workMinutesSum;
    public Integer overWorkMinutesSum;
}
