@startuml 勤怠管理クラス図
package domain {
    class Attendance<<(E,gray) Entity>> {
        AttendanceDate attendanceDate
        AttendanceTime attendanceTime
        WorkDuration workDuration
        OverWorkDuration overWorkDuration
    }

    class AttendanceDate<<(V,gray) ValueObject>> {
           LocalDate date
    }

    class AttendanceTime<<(E,gray) Entity>> {
        LocalDateTime start
        LocalDateTime end
        + WorkDuration calculateWorkDuration()
    }

    class WorkDuration<<(V,gray) ValueObject>> {
        Duration duration
        + OverWorkDuration calculateOverWorkDuration()
     }

     class OverWorkDuration<<(V,gray) ValueObject>> {
        Duration duration
     }

     class AttendanceRepository<<(R,Cyan) Repository>> {
           + void persist(Attendance attendance)
           + List<Attendance> select(int yearMonth)
      }
}

package datasource {
    class AttendanceRepositoryCsv<<(R,red) RepositoryImpl>> {
        + void persist(Attendance attendance)
        + List<Attendance> select(int yearMonth)
    }

    class AttendanceMapperCsv<<(M,green) Mapper>> {
        void persist(Attendance attendance)
        List<Attendance> findByYearMonth(int yearMonth)
    }
}

package service {
    class AttendanceService<<(S,strategy) Service>> {
       + void input(AttendancePersistRequest request)
       + AttendanceTotalResponse total(YearMonth yearMonth)
    }

    class AttendanceInputRequest<<(R,gray) Response>> {
            LocalDate date
            LocalDateTime start
            LocalDateTime end
    }


    class AttendanceTotalResponse<<(R,gray) Response>> {
        Long totalWorkMinutes
        Long totalOverWorkMinutes
    }
}

package api {
    class AttendanceApi<<(A,yellow) Api>> {
        void input(String date,String start,String end)
        Attendance total(String yerMonth)
    }

}

class main {
}

main --> AttendanceApi
AttendanceApi --> AttendanceService
AttendanceService --> Attendance
AttendanceRepositoryCsv -left-|> AttendanceRepository
AttendanceService --> AttendanceRepository
Attendance --> AttendanceTime
Attendance --> WorkDuration
Attendance --> OverWorkDuration
Attendance --> AttendanceDate
AttendanceRepositoryCsv --> AttendanceMapperCsv


@enduml
